tests/semantic_cases/invalid/duplicate_import_alias.ob0
MODULE Main;
IMPORT IO, IO;
BEGIN
END Main.
